# demo

./: .gitignore  .gitlab-ci.yml  README.md  pre-commit.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
demo/: __init__.py  app.py
tests/: test_app.py
