[tool.poetry]
name = "demo"
version = "0.0.0"
description = "Template project with all configured linters."
authors = ["Kirill Kolesnikov <kkxnes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^20.8b1"
flake8 = "^3.9.0"
pycodestyle = "^2.7.0"
mypy = "^0.812"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[tool.black]
line-length = 88  # default for black
target-version = ["py38"]  # py39 not supported yet

[tool.isort]
line_length = 88  # default for black
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
