[tool.poetry]
name = "demo"
version = "0.0.0"
description = "Template project with all configured linters."
authors = ["Kirill Kolesnikov <kkxnes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.930"
pytest = "^6.2.3"
pytest-cov = "^3.0.0"
wemake-python-styleguide = "^0.16.0"
bandit = "^1.7.1"
flake8-todos = "^0.1.5"
pyright = "^0.0.13"

[tool.black]
line-length = 88  # default for black
skip_string_normalization = true
target-version = ["py310"]  # py39 not supported yet

[tool.isort]
line_length = 88  # default for black
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
